--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,18 @@
-name: C/C++ CI
+name: default-build
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+    # Inputs the workflow accepts.
+    inputs:
+      name:
+        description: 'test'
+        default: 'World'
+        required: true
+        type: string
 
 env:
   BUILD_TYPE: Debug
@@ -12,31 +20,25 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - uses: actions/checkout@v3
       with:
         submodules: 'recursive'
 
-    - name: Configure
-      run: sudo ./configure
+    - name: job-configure
+      run: sudo ./configure 0.0.1 OFF 2
+      env:
+        MY_VAR_1: "one"
+        MY_VAR_2: "two"
+        MY_VAR_3: "three"
 
-    - name: Build
+    - name: job-build
       run: make build
 
-    - name: Upload artifacts
+    - name: job-upload-artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Build
         path: ${{github.workspace}}/Nucleo-h743zi2/build/nuc-h7-uvc.bin
-
-    #- name: Configure CMake
-      #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
-    #- name: Build
-    #  run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-    #- name: Test
-    #  working-directory: ${{github.workspace}}/build
-    #  run: ctest -C ${{env.BUILD_TYPE}}
